syntax = "proto2";

import "schema/mapentry.proto";
import "schema/sth.proto";
import "api/api.proto";

option go_package = "github.com/tweag/trustix/packages/trustix/proto";

package trustix;

// TrustixCombinedRPC
service TrustixCombinedRPC {
  // Get map[LogName]Log
  rpc Logs (LogsRequest) returns (LogsResponse) {}

  // TODO: I'm not sure if this belongs here in it's current shape...
  rpc GetLogEntries(GetLogEntriesRequestNamed) returns (LogEntriesResponse) {}

  // Get map[LogName]OutputHash
  rpc Get (KeyRequest) returns (EntriesResponse) {}
  rpc GetStream (stream KeyRequest) returns (stream EntriesResponse) {}

  // Compare(inputHash)
  rpc Decide (KeyRequest) returns (DecisionResponse) {}
  rpc DecideStream (stream KeyRequest) returns (stream DecisionResponse) {}

  // Get stored value by digest
  rpc GetValue (ValueRequest) returns (ValueResponse) {}

}

message LogsRequest {
}

message LogSigner {
  enum KeyTypes {
    ed25519 = 0;
  }
  required KeyTypes KeyType = 1;
  required string Public = 2;
}

message Log {
  required string Name = 1;
  required string Mode = 2;
  required LogSigner Signer = 3;
  map<string, string> Meta = 4;
  required STH STH = 5;
}

message LogsResponse {
  repeated Log Logs = 1;
}

message GetLogEntriesRequestNamed {
  required string LogName = 1;
  required uint64 Start = 2;
  required uint64 Finish = 3;
}

message KeyRequest {
  required bytes Key = 1;
}

message EntriesResponse {
  required bytes Key = 1;
  map<string, MapEntry> Entries = 2;
}

message LogValueResponse {
  required string LogName = 1;
  required bytes Digest = 2;
}

message LogValueDecision {
  repeated string LogNames = 1;
  required bytes Digest = 2;
  required int32 Confidence = 3;
  required bytes Value = 4;
}

message DecisionResponse {
  required LogValueDecision Decision = 1;

  // Non-matches (hash mismatch)
  repeated LogValueResponse Mismatches = 2;

  // Full misses (lognames missing log entry entirely)
  repeated string Misses = 3;
}
